--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
-    "@tauri-apps/api": "^2",
-    "@tauri-apps/plugin-opener": "^2",
+    "@tauri-apps/api": "2.9.0",
+    "@tauri-apps/plugin-opener": "2.5.2",
     "@workspace/shell": "workspace:*",
     "react": "catalog:",
     "react-dom": "catalog:"
