--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "catalog": {
     "@eslint/js": "9.38.0",
-    "@hookform/resolvers": "^5.2.2",
+    "@hookform/resolvers": "5.2.2",
     "@solana-program/system": "0.9.0",
     "@solana-program/token": "0.7.0",
     "@solana-program/token-2022": "0.6.0",
@@ -10,7 +10,7 @@
     "@tailwindcss/vite": "4.1.16",
     "@tanstack/react-query": "5.90.5",
     "@types/bun": "1.3.2",
-    "@types/node": "^24.10.0",
+    "@types/node": "24.10.0",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
     "@vitejs/plugin-react": "5.1.0",
@@ -23,7 +23,7 @@
     "lucide-react": "0.548.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-hook-form": "^7.65.0",
+    "react-hook-form": "7.65.0",
     "react-router": "7.9.4",
     "tailwindcss": "4.1.16",
     "typescript": "5.9.3",
@@ -32,8 +32,8 @@
     "vite-bundle-analyzer": "1.2.3",
     "vitest": "4.0.7",
     "ws": "8.18.3",
-    "wxt": "^0.20.6",
-    "zod": "^4.1.12"
+    "wxt": "0.20.6",
+    "zod": "4.1.12"
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.8",
@@ -48,6 +48,7 @@
     "cspell": "9.3.2",
     "lefthook": "2.0.4",
     "pkg-pr-new": "0.0.61",
+    "syncpack": "14.0.0-alpha.29",
     "turbo": "2.6.1",
     "vitest": "catalog:"
   },
@@ -57,9 +58,6 @@
   },
   "name": "samui",
   "packageManager": "bun@1.3.3",
-  "pnpm": {
-    "onlyBuiltDependencies": ["@tailwindcss/oxide", "esbuild", "lefthook", "sharp"]
-  },
   "private": true,
   "scripts": {
     "build": "turbo run build",
