--- a/packages/background/package.json
+++ b/packages/background/package.json
@@ -1,11 +1,11 @@
 {
   "dependencies": {
     "@solana/kit": "catalog:",
-    "@solana/wallet-standard-features": "^1.3.0",
-    "@solana/wallet-standard-util": "^1.1.2",
-    "@wallet-standard/core": "^1.1.1",
-    "@webext-core/messaging": "^2.3.0",
-    "@webext-core/proxy-service": "^1.2.1",
+    "@solana/wallet-standard-features": "1.3.0",
+    "@solana/wallet-standard-util": "1.1.2",
+    "@wallet-standard/core": "1.1.1",
+    "@webext-core/messaging": "2.3.0",
+    "@webext-core/proxy-service": "1.2.1",
     "@webext-core/storage": "1.2.0",
     "@workspace/db": "workspace:*",
     "@workspace/keypair": "workspace:*",
