--- a/lefthook.yaml
+++ b/lefthook.yaml
@@ -5,6 +5,10 @@ pre-commit:
       run: bun syncpack lint
       glob: "package.json"
 
+    - name: editorconfig checker
+      run: bun ec
+      glob: "*"
+
     - name: lint
       run: bun lint
       glob: "*"
