--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@socketsecurity/bun-security-scanner": "1.1.1",
     "@types/bun": "catalog:",
     "@types/node": "catalog:",
+    "bundlemon": "3.1.0",
     "cspell": "9.3.2",
     "editorconfig-checker": "6.1.1",
     "lefthook": "2.0.4",
