--- a/turbo.json
+++ b/turbo.json
@@ -17,6 +17,16 @@
     "test": {
       "dependsOn": ["^test"]
     },
+    "test:e2e": {
+      "dependsOn": ["^test:e2e"]
+    },
+    "test:integration": {
+      "dependsOn": ["^test:integration"]
+    },
+    "test:integration:watch": {
+      "cache": false,
+      "persistent": true
+    },
     "test:watch": {
       "cache": false,
       "persistent": true
