--- a/packages/explorer/package.json
+++ b/packages/explorer/package.json
@@ -11,6 +11,7 @@
     "@workspace/ui": "workspace:*",
     "react-hook-form": "catalog:",
     "react-router": "catalog:",
+    "superjson": "2.2.6",
     "zod": "catalog:"
   },
   "devDependencies": {
