--- a/packages/background/package.json
+++ b/packages/background/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@solana/kit": "catalog:",
+    "@solana/wallet-standard-chains": "1.1.1",
     "@solana/wallet-standard-features": "1.3.0",
     "@solana/wallet-standard-util": "1.1.2",
     "@wallet-standard/core": "1.1.1",
