--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -35,6 +35,7 @@
     "react-resizable-panels": "3.0.6",
     "react-router": "catalog:",
     "sonner": "2.0.7",
+    "superjson": "2.2.6",
     "tailwind-merge": "3.4.0",
     "tw-animate-css": "1.4.0",
     "zod": "catalog:"
