--- a/packages/onboarding/package.json
+++ b/packages/onboarding/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@hookform/resolvers": "catalog:",
     "@tanstack/react-query": "catalog:",
     "@workspace/db": "workspace:*",
     "@workspace/db-react": "workspace:*",
@@ -11,7 +12,9 @@
     "@workspace/solana-client-react": "workspace:*",
     "@workspace/ui": "workspace:*",
     "@wxt-dev/browser": "catalog:",
-    "react-router": "catalog:"
+    "react-hook-form": "catalog:",
+    "react-router": "catalog:",
+    "zod": "catalog:"
   },
   "devDependencies": {
     "@types/bun": "catalog:",
