--- a/packages/wallet-playground/package.json
+++ b/packages/wallet-playground/package.json
@@ -1,20 +1,20 @@
 {
   "dependencies": {
-    "@hookform/resolvers": "catalog:",
-    "@solana/kit": "catalog:",
-    "@tanstack/react-query": "catalog:",
+    "@solana/kit": "^5.1.0",
+    "@solana/react": "^5.1.0",
+    "@solana/wallet-standard-features": "^1.3.0",
+    "@wallet-standard/core": "^1.1.1",
+    "@wallet-standard/react": "^1.0.1",
     "@workspace/db": "workspace:*",
     "@workspace/db-react": "workspace:*",
     "@workspace/explorer": "workspace:*",
-    "@workspace/keypair": "workspace:*",
-    "@workspace/settings": "workspace:*",
     "@workspace/solana-client": "workspace:*",
     "@workspace/solana-client-react": "workspace:*",
     "@workspace/ui": "workspace:*",
-    "@workspace/wallet-playground": "workspace:*",
-    "react-hook-form": "catalog:",
-    "react-router": "catalog:",
-    "zod": "catalog:"
+    "gill": "0.14.0",
+    "lucide-react": "catalog:",
+    "react-error-boundary": "^6.0.0",
+    "react-router": "catalog:"
   },
   "devDependencies": {
     "@types/bun": "catalog:",
@@ -27,7 +27,7 @@
     "./*": "./src/*.tsx"
   },
   "license": "MIT",
-  "name": "@workspace/tools",
+  "name": "@workspace/wallet-playground",
   "peerDependencies": {
     "react": "catalog:",
     "react-dom": "catalog:"
