--- a/packages/shell/package.json
+++ b/packages/shell/package.json
@@ -16,6 +16,7 @@
     "@workspace/portfolio": "workspace:*",
     "@workspace/request": "workspace:*",
     "@workspace/settings": "workspace:*",
+    "@workspace/solana-client-react": "workspace:*",
     "@workspace/tools": "workspace:*",
     "@workspace/ui": "workspace:*",
     "@wxt-dev/browser": "catalog:",
