--- a/bunfig.toml
+++ b/bunfig.toml
@@ -1,7 +1,7 @@
 [install]
 exact = true
 linker = "isolated"
-minimumReleaseAge = 259200
+minimumReleaseAge = 0
 
-[install.security]
-scanner = "@socketsecurity/bun-security-scanner"
+# [install.security]
+# scanner = "@socketsecurity/bun-security-scanner"
