--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "editorconfig-checker": "6.1.1",
     "lefthook": "2.0.15",
     "pkg-pr-new": "0.0.62",
+    "playwright": "1.57.0",
     "syncpack": "14.0.0-alpha.37",
     "turbo": "2.7.5",
     "vitest": "catalog:"
